<resources>
    <string name="app_name">Soundboard</string>
    <string name="A_Note">A</string>
    <string name="Bb_Note">Bb</string>
    <string name="B_Note">B</string>
    <string name="C_Note">C</string>
    <string name="Cs_Note">Cs</string>
    <string name="D_Note">D</string>
    <string name="Ds_Note">Ds</string>
    <string name="E_Note">E</string>
    <string name="F_Note">F</string>
    <string name="Fs_Note">Fs</string>
    <string name="G_Note">G</string>
    <string name="Gs_Note">Gs</string>
    <string name="Scale">Scale</string>
    <string name="Start">Record</string>
    <string name="Stop">Stop</string>
    <string name="Play">Play</string>
    <string name="Reset">Reset</string>
    <string name="Rick_Rolled">Click 4 Fun</string>


</resources>
